gitlab/extra-manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-gitlab
  namespace: gitlab
spec:
  parentRefs:
  - name: tls-gateway
    namespace: kube-system
  hostnames:
  - gitlab.unixworld.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: gitlab-webservice-default
      port: 8181
